[package]
name = "netsblox_to_musicxml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsblox-vm = "0.4.0"
simple-xml-builder = "1.1.0"
gc-arena = { version = "=0.4.0", default-features =  false }